--- a/openaoe/frontend/src/pages/chat/components/chat/chat.module.less
+++ b/openaoe/frontend/src/pages/chat/components/chat/chat.module.less
@@ -49,7 +49,7 @@
     height: 100%;
     width: 100%;
     gap: 48px;
-    padding: 12px 0;
+    padding: 0;
     position: relative;
 }
 .preview-sessions {
